--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
     - name: Checkout
       uses: actions/checkout@v2
     - name: Run CMake
